Add footer for credits

--- a/website/www/index.html
+++ b/website/www/index.html
@@ -23,13 +23,18 @@
             <div id="div-results"></div>
         </div>
 
-        <div>
+        <div id="results">
             <div id="current-result">
                 <div class="card"><h1 class="card-title"></h1></div>
             </div>
             <div id="results-wrapper"></div>
         </div>
 
+        <div id="dev-info">
+            <footer>
+                <p class="body-text">Created by Tejas Prabhune - <a href="mailto:prabhune@berkeley.edu">prabhune@berkeley.edu</a></p>
+            </footer>
+        </div>
 
     </body>
 </html>
