Fix footer capitalization

--- a/website/www/index.html
+++ b/website/www/index.html
@@ -32,7 +32,7 @@
 
         <div id="dev-info">
             <footer>
-                <p class="body-text">Created by Tejas Prabhune - <a href="mailto:prabhune@berkeley.edu">prabhune@berkeley.edu</a></p>
+                <p class="body-text">created by tejas prabhune - <a href="mailto:prabhune@berkeley.edu">prabhune@berkeley.edu</a></p>
             </footer>
         </div>
 
