Implement add round page with standardized dropbox functionality

--- a/website/www/index.html
+++ b/website/www/index.html
@@ -8,13 +8,16 @@
         <script src="js/index.js" type="module"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
         <script
-            src="https://cdn.jsdelivr.net/npm/algoliasearch@4.14.2/dist/algoliasearch-lite.umd.js"
-            integrity="sha256-dImjLPUsG/6p3+i7gVKBiDM8EemJAhQ0VvkRK2pVsQY="
-            crossorigin="anonymous"
+          src="https://cdn.jsdelivr.net/npm/algoliasearch@4.14.2/dist/algoliasearch.umd.js"
+          integrity="sha256-DRnoUQAweVMsVPRMhfHC5zPqUP8s2fWUqD39yBsWg+M="
+          crossorigin="anonymous"
         ></script>
         <title>NPDA Videos</title>
     </head>
     <body>
+        <div>
+            <p class="body-text" id="add-button">add round</p>
+        </div>
         <div id="div-title">
             <h1 id="h1-title"><em id="title-link">npda</em></h1>
         </div>
